# navsat_datum_initializer

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.py
action/: DatumInitializer.action
launch/: navsat_datum_initializer.launch
msg/: InitializerCommand.msg  InitializerFeedback.msg  InitializerResult.msg
src/navsat_datum_initializer/: datum_initializer.py  datum_initializer_node.py
