<?xml version="1.0"?>
<package format="2">
  <name>navsat_datum_initializer</name>
  <version>0.1.0</version>
  <description>The navsat_datum_initializer package, based on RComponent structure. Node to call the datum service of navstat_transform_node</description>

  <maintainer email="rnavarro@robotnik.es">Román Navarro</maintainer>

  <author email="rnavarro@robotnik.es">Román Navarro</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>rcomponent</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>rcomponent</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>python-utm-pip</exec_depend>
  <exec_depend>python-numpy-pip</exec_depend>
  <exec_depend>python-sklearn-pip</exec_depend>

  <export>

  </export>
</package>
